# MatchEngine

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  大纲.txt
MatchEditor/: CMakeLists.txt
MatchEditor/include/: editor.hpp  ui.hpp
MatchEditor/include/ui_nodes/: hierarchy_ui_node.hpp  inspector_ui_node.hpp  scene_ui_node.hpp  setting_ui_node.hpp  ui_context.hpp
MatchEditor/include/ui_nodes/inspector/: inspector_ui_node.hpp
MatchEditor/include/ui_nodes/inspector/component_ui/: component_ui.hpp  component_ui_manager.hpp  component_view.hpp
MatchEditor/include/ui_nodes/viewport/: viewport_camera.hpp  viewport_ui_node.hpp
MatchEditor/src/: editor.cpp  main.cpp  ui.cpp
MatchEditor/src/ui_nodes/: hierarchy_ui_node.cpp  inspector_ui_node.cpp  scene_ui_node.cpp  setting_ui_node.cpp  ui_context.cpp
MatchEditor/src/ui_nodes/inspecror/: inspector_ui_node.cpp
MatchEditor/src/ui_nodes/inspecror/component_ui/: component_ui_manager.cpp
MatchEditor/src/ui_nodes/viewport/: viewport_camera.cpp  viewport_ui_node.cpp
MatchEngine/: CMakeLists.txt
MatchEngine/Core/: CMakeLists.txt
MatchEngine/Core/Include/Core/: Core.hpp  Defines.hpp
MatchEngine/Core/Include/Core/Container/: Array.hpp  Container.hpp  Map.hpp  Pair.hpp  Set.hpp
MatchEngine/Core/Include/Core/CopyMove/: Copy.hpp  CopyMove.hpp  Forward.hpp  Move.hpp
MatchEngine/Core/Include/Core/Delegate/: Delegate.hpp  IDelegate.hpp  MultiDelegate.hpp  SingleDelegate.hpp
MatchEngine/Core/Include/Core/I18n/: I18n.hpp  Text.hpp
MatchEngine/Core/Include/Core/Math/: Math.hpp  Vector.hpp
MatchEngine/Core/Include/Core/Misc/: Copy.hpp  HandleAllocator.hpp  Misc.hpp  Move.hpp  SpecHandleAllocator.hpp
MatchEngine/Core/Include/Core/SharedPtr/: SharedFromThis.hpp  SharedPtr.hpp  SharedPtrImpl.hpp
MatchEngine/Core/Include/Core/String/: String.hpp  StringImpl.hpp
MatchEngine/Core/Include/Core/Thread/: Atomic.hpp  Counter.hpp  CriticalSection.hpp  ScopeLock.hpp  Sleep.hpp  Thread.hpp  ThreadSafetyMode.hpp
MatchEngine/Core/Src/: Core.cpp
MatchEngine/include/MatchEngine/: MatchEngine.hpp
MatchEngine/include/MatchEngine/core/: context.hpp  logger.hpp
MatchEngine/include/MatchEngine/core/base/: macro.hpp  pointer_wrapper.hpp  runtime_system.hpp  singleton.hpp
MatchEngine/include/MatchEngine/core/logger/: logger.hpp  logger_system.hpp
MatchEngine/include/MatchEngine/core/reflect/: class_builder.hpp  class_descriptor.hpp  object.hpp  reflect_data.hpp  reflect_helper.hpp  reflect_macro.hpp  reflect_system.hpp
MatchEngine/include/MatchEngine/core/reflect/wrapper/: any_wrapper.hpp  (+2 more)
MatchEngine/include/MatchEngine/core/serialize/: deserialize_stream.hpp  serialize_macro.hpp  serialize_stream.hpp  serialize_trait.hpp  specific_serialize_trait.hpp
MatchEngine/include/MatchEngine/engine/: engine.hpp  runtime_context.hpp
MatchEngine/include/MatchEngine/function/: user_interface.hpp
MatchEngine/include/MatchEngine/function/asset/: asset_system.hpp
MatchEngine/include/MatchEngine/function/camera/: camera_id.hpp  camera_system.hpp
MatchEngine/include/MatchEngine/function/event/: event.hpp  event_layer.hpp  event_system.hpp  listener.hpp
MatchEngine/include/MatchEngine/function/game_framework/: component_type_uuid_system.hpp  game_object.hpp  game_object_uuid_allocator.hpp  scene_manager.hpp
MatchEngine/include/MatchEngine/function/input/: event.hpp  event_system.hpp  input_system.hpp
MatchEngine/include/MatchEngine/function/render/: render_system.hpp  swap_data.hpp
MatchEngine/include/MatchEngine/function/resource/: resource_system.hpp
MatchEngine/include/MatchEngine/function/timer/: timer.hpp  timer_system.hpp
MatchEngine/include/MatchEngine/function/user_interface/: pointer_wrapper.hpp  user_interface.hpp
MatchEngine/include/MatchEngine/function/window/: window_system.hpp
MatchEngine/include/MatchEngine/game_framework/: game_object.hpp  level.hpp  rtti.hpp  scene.hpp  types.hpp  uuid_type.hpp
MatchEngine/include/MatchEngine/game_framework/component/: component.hpp  component_type_uuid.hpp  declare_component.hpp
MatchEngine/include/MatchEngine/game_framework/game_object/: game_object.hpp  game_object_resource.hpp  game_object_resource_container.hpp
MatchEngine/src/MatchEngine/: internal.hpp
MatchEngine/src/MatchEngine/core/: context.cpp  logger.cpp
MatchEngine/src/MatchEngine/core/base/: runtime_system.cpp
MatchEngine/src/MatchEngine/core/logger/: logger.cpp  logger_system.cpp
MatchEngine/src/MatchEngine/core/reflect/: class_descriptor.cpp  object.cpp  reflect_data.cpp  reflect_helper.cpp  reflect_system.cpp
MatchEngine/src/MatchEngine/core/serialize/: deserialize_stream.cpp  serialize_stream.cpp
MatchEngine/src/MatchEngine/engine/: engine.cpp  runtime_context.cpp
MatchEngine/src/MatchEngine/function/: user_interface.cpp
MatchEngine/src/MatchEngine/function/asset/: asset_system.cpp
MatchEngine/src/MatchEngine/function/camera/: camera_system.cpp
MatchEngine/src/MatchEngine/function/event/: event.cpp  event_layer.cpp  event_system.cpp  listener.cpp
MatchEngine/src/MatchEngine/function/game_framework/: component_type_uuid_system.cpp  game_object_uuid_allocator.cpp  scene_manager.cpp
MatchEngine/src/MatchEngine/function/input/: event.cpp  event_system.cpp  input_system.cpp
MatchEngine/src/MatchEngine/function/render/: render.cpp  render_system.cpp  swap_data.cpp
MatchEngine/src/MatchEngine/function/resource/: resource_system.cpp
MatchEngine/src/MatchEngine/function/timer/: timer.cpp  timer_system.cpp
MatchEngine/src/MatchEngine/function/user_interface/: user_interface.cpp
MatchEngine/src/MatchEngine/function/window/: window_system.cpp
MatchEngine/src/MatchEngine/game_framework/: game_object.cpp  level.cpp  scene.cpp
MatchEngine/src/MatchEngine/game_framework/component/: component.cpp
MatchEngine/src/MatchEngine/game_framework/game_object/: game_object.cpp  game_object_resource.cpp  game_object_resource_container.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: component.hpp  main.cpp  my_component.hpp  my_reflect_class.hpp  reflect_test.hpp
(+95 files in other folders)
